DocImport 1.0.13
================================================================================
# [LOW] Raise a 404 error if requesting an article that doesn't exist

DocImport 1.0.12
================================================================================
# [LOW] gh-16 Highlight was always loaded from HTTP, even on HTTPS sites

DocImport 1.0.11
================================================================================
! Images not shown in generated articles due to changes in the upgraded DocBook XSL stylesheets (previous fix didn't work on some sites)

DocImport 1.0.10
================================================================================
! Images not shown in generated articles due to changes in the upgraded DocBook XSL stylesheets

DocImport 1.0.9
================================================================================
! CLI scripts were not being copied over
+ Added support for automatic update notification and installation
+ Allow you to put books inside /media/com_docimport/books for better organisation
+ Allow syntax highlighting in programlisting via the language attribute. See https://github.com/isagalaev/highlight.js/tree/master/src/languages for supported language names (php, bash, css, apache, nginx, xml, diff, ini, json, markdown and sql are among them).
~ Updating DBXSL stylesheets to 1.78.1
# [MEDIUM] Fatal error when purging SEF URL cache

DocImport 1.0.8
================================================================================
+ Database table installation, uninstallation and update is now handled by our own code instead of the unreliable JInstaller code
+ Automatically repair the database tables in case of an update going wrong
# [MEDIUM] Document generation in the CLI wouldn't get the correct URL to images

DocImport 1.0.7
================================================================================
+ gh-6 Added sh404SEF plugin to create SEF url with that component