@@ -1,5 +1,6 @@
 DocImport 1.0.13
 ================================================================================
+~ Changed the .htaccess files to be compatible with Apache 2.4
 # [LOW] Raise a 404 error if requesting an article that doesn't exist
 
 DocImport 1.0.12
